scrollbar fix

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -31,6 +31,17 @@ body {
     padding: 0;
   }
 
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+
   .container {
     display: flex;
     flex-direction: row;
